# JsonPilot

./: .gitignore  .gitmodules  AGENTS.md  CMakeLists.txt  README.md  config.txt
.cache/: ss.info
data/: root.json
data/laser/: actio.json
deploy/: build.bat  installer.nsi
src/: main.cpp  resources.rc.in  shared.h  viewer_main.cpp
web/: index.html  script.js  style.css
